provision/deployment/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: skillometer-client-ingress-route-websecure
  namespace: skillometer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`skillometer.idev-present.com`)
      kind: Rule
      services:
        - name: client
          port: 8080
  tls:
    secretName: wildcard-skillometer-idev-present-com-tls
